--- a/Chess/CMakeLists.txt
+++ b/Chess/CMakeLists.txt
@@ -30,6 +30,7 @@ find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick REQUIRED)
 set(PROJECT_SOURCES
         main.cpp
         chessboardutilities.h   chessboardutilities.cpp
+        tileback.h  tileback.cpp
         qml.qrc
 )
 
