--- a/.gitignore
+++ b/.gitignore
@@ -73,5 +73,6 @@ Thumbs.db
 
 # User defined 
 build-Chess-Desktop_Qt_6_2_3_GCC_64bit-Debug/
+build-Chess-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/
 .git/
 
